fixes test page main content alignment and spacing

--- a/static-build/pages/test/styles.css
+++ b/static-build/pages/test/styles.css
@@ -3,6 +3,17 @@
 @import 'components/TestCard/styles.css';
 @import 'components/Breadcrumbs/styles.css';
 
+main {
+  gap: var(--spacing-5);
+  padding: var(--spacing-7) var(--spacing-6);
+  max-width: 1024px;
+  margin: 0 auto;
+
+  @media (orientation: landscape) {
+    padding: var(--spacing-7) var(--spacing-6) var(--spacing-8);
+  }
+}
+
 .heroImage {
   background: var(--ice-blue);
   border-radius: 50%;
